<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <RelativeLayout
        android:id="@+id/signup_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/signup_screen_background"
        tools:context="com.horux.visito.activities.SignUpActivity">

        <ScrollView
            android:id="@+id/signup_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:fadeScrollbars="true"
            android:fillViewport="true"
            android:scrollbarSize="2dp"
            android:scrollbars="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="48dp"
                    android:src="@drawable/app_logo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:layout_alignStart="@id/signup_statement"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_statement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_text"
                    android:layout_alignStart="@id/full_name"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/please_signup_to_your_account"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_statement"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/signup"
                    android:background="@drawable/png_email_background"
                    android:drawableEnd="@drawable/ic_person"
                    android:hint="@string/full_name"
                    android:inputType="textCapWords"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/full_name"
                    android:layout_alignStart="@id/full_name"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/signup"
                    android:background="@drawable/png_email_background"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:maxLength="27"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_address"
                    android:layout_alignStart="@id/full_name"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/signup"
                    android:paddingStart="16dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_error"
                    android:layout_alignStart="@id/email_address"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_toStartOf="@id/signup"
                    android:background="@drawable/png_email_background"
                    android:drawableEnd="@drawable/ic_phone"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="11"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/phone_number_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_number"
                    android:layout_alignStart="@id/full_name"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/signup"
                    android:paddingStart="16dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_number_error"
                    android:layout_alignStart="@id/email_address"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_toStartOf="@id/signup"
                    android:background="@drawable/png_email_background"
                    android:drawableEnd="@drawable/ic_eye"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword"
                    android:maxLength="16"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/light_grey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/password_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_alignStart="@id/full_name"
                    android:layout_alignEnd="@id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_toStartOf="@id/signup"
                    android:paddingStart="16dp"
                    android:text=""
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_error"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/login_button"
                    android:onClick="signUp"
                    android:padding="10dp"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/signup_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/orange"
            android:progressTint="@color/orange"
            android:visibility="gone" />
    </RelativeLayout>
</layout>